# geno-bicluster

./: README.md  bicluster_final.py  pyproject.toml  test.ipynb
Test/: leo_launcher_test.py  test_Biclustering.py
src/geno_biclustering/: cli.py  core.py
