[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geno-bicluster"
version = "0.1.0"
description = "Fast biclustering of SNP-SNP interaction matrices"
requires-python = ">=3.8"
authors = [{name = "Jerry Liu", email = "jliu@example.com"}]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "numba>=0.59"
]

[project.scripts]
geno-bicluster = "geno_biclustering.cli:main"
